update structure change
wrapped the whole thing in a column class to test if it functions better w @mc

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -1,4 +1,5 @@
-﻿* {
+﻿
+* {
     box-sizing: border-box;
 }
 /*entire body*/
@@ -28,7 +29,6 @@ body {
 .column {
     display: flex;
     flex-direction: row;
-    /*height: 700px;*/ /*not necessary to keep the 'boxes' large and fill page*/
     justify-content: center;
 }
 .column.contact-info {
@@ -94,7 +94,8 @@ body {
 a {
     color: darkgray;
 }
-/**/
+
+/*media querries for phones*/
 @media (max-width: 900px) {
     .body {
         flex-direction: column;
