--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -100,8 +100,8 @@ a {
         flex-direction: column;
     }
 }
-@media (max-width: 900px) {
+/*@media (max-width: 900px) {
     .column {
         flex-direction: column;
     }
-}
+}*/
