--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -66,6 +66,11 @@ body {
     background-color: lightgray;
     height: 100px;
 }
+/*.footer .column {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}*/
 /*illustration elements*/
 .self-portrait { /*describes the properties the picture should have*/
     border-radius: 5px;
@@ -106,7 +111,7 @@ a {
     .footer {
         height: auto;
     }
-    .footer > column {
+    .footer .column {
         flex-direction: row;
     }
 }
