--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -112,6 +112,7 @@ a {
     }
     .column .project-info .content-space .text-boxes .column .project-illustration {
         order: -1;
+        justify-content:end;
     }
     .column .contact-info .content-space .text-boxes .column .text-boxes {
         order: 2;
