updated MQ object-fit for illustrations

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -117,6 +117,7 @@ a {
         order: -1;
         max-height: 100%;
         max-width: auto;
+        object-fit: contain;
     }
     .column .contact-info .content-space .text-boxes .column .text-boxes {
         order: 2;
