--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -80,7 +80,7 @@ body {
 }
 .project-illustration {
     border-radius: 4px;
-    object-fit: cover;
+    object-fit: contain;
     width: 150px;
     height: 150px;
 }
