--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -102,7 +102,7 @@ a {
 
 /*e-mail modal*/
 .email-modal {
-    display: block;
+    display: fixed;
     z-index: 1;
     width: 250px;
     height: 250px;
