--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -102,10 +102,10 @@ a {
 
 /*e-mail modal*/
 .email-modal {
-    display: fixed;
+    position: fixed;
     z-index: 1;
-    width: 250px;
-    height: 250px;
+    width: 100%;
+    height: 100%;
 }
 
 /*Media Queries for phone screens*/
