--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -103,9 +103,12 @@ a {
 /*e-mail modal*/
 .email-modal {
     position: fixed;
+    background-color: whitesmoke;
+    padding: 15px;
+    border: 2px dotted red;
     z-index: 1;
-    width: 100%;
-    height: 100%;
+    width: 250px;
+    height: 250px;
 }
 
 /*Media Queries for phone screens*/
