--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -107,8 +107,8 @@ a {
     padding: 15px;
     border: 2px dotted red;
     z-index: 1;
-    width: 250px;
-    height: 250px;
+    width: 40%;
+    height: 50%;
 }
 
 /*Media Queries for phone screens*/
