--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -103,7 +103,8 @@ a {
 /*e-mail modal*/
 .email-modal {
     position: fixed;
-    right: 100px;
+    left: 100px;
+    bottom: 250px;
     background-color: whitesmoke;
     padding: 15px;
     border: 2px dotted red;
