added modal-content class for sorting of elements

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -112,12 +112,16 @@ a {
     width: 40%;
     height: 50%;
 }
+/*order email modal content*/
+.modal-content {
+    float: right;
+}
 
 /*buttons*/
 
 /*exit button*/
 .close-button {
-    float: right;
+    /*float: right;*/
     width: 25px;
     height: 25px;
     background-color: orangered;
