--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -122,6 +122,7 @@ a {
 /*exit button*/
 .close-button {
     float: right;
+    justify-content: center;
     width: 25px;
     height: 25px;
     background-color: orangered;
