--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -125,6 +125,7 @@ a {
     align-content: center;
     width: 25px;
     height: 25px;
+    margin-left: 150px;
     background-color: orangered;
 }
 
