--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -124,7 +124,7 @@ a {
     float: right;
     align-content: center;
     font-size: 30px;
-    margin-left: 150px;
+/*    margin-left: 150px;*/
     background-color: orangered;
 }
 
