update html, moved span out of h3, css, added padding to button

--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -122,7 +122,7 @@ a {
 .close-button {
     float: right;
     font-size: 28px;
-/*    margin-left: 150px;*/
+    padding: 5px;
     background-color: orangered;
 }
 
