--- a/SaraYohannes.github.io/frontstylesheet.css
+++ b/SaraYohannes.github.io/frontstylesheet.css
@@ -122,7 +122,7 @@ a {
 .close-button {
     float: right;
     font-size: 28px;
-    padding: 5px;
+    padding: 0px 5px;
     background-color: orangered;
 }
 
