--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -105,9 +105,8 @@ a {
     position: fixed;
     left: 100px;
     bottom: 150px;
-    background-color: whitesmoke;
+    background-color: lightgray;
     padding: 15px;
-/*    border: 2px dotted red;*/
     z-index: 1;
     width: 40%;
     height: 50%;
