--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -102,7 +102,7 @@ a {
 
 /*e-mail modal*/
 .email-modal {
-    display: block;
+    display: none;
     position: fixed;
     left: 100px;
     bottom: 150px;
@@ -124,6 +124,7 @@ a {
     font-size: 28px;
     padding: 0px 5px;
     background-color: orangered;
+    
 }
 
 /*Media Queries for phone screens*/
