added butt_open to emailmodal.js
opens up modal!

--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -130,7 +130,7 @@ a {
     background-color: whitesmoke;
     border: none;
     text-align: center;
-    color: red;
+    color: darkslategray;
 }
 
 /*Media Queries for phone screens*/
