added a copyText-button.css
for copying text to clipboard

--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -133,6 +133,13 @@ a {
     text-align: center;
     color: darkslategray;
 }
+.copyText-button {
+    display: block;
+    background-color: whitesmoke;
+    border: none;
+    text-align: center;
+    color: darkslategray;
+}
 
 /*Media Queries for phone screens*/
 @media (max-width: 900px) {
