--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -131,6 +131,7 @@ a:hover {
 /*exit button*/
 .close_button {
     float: right;
+    position: static;
     background-color: orangered;
     padding: 0px 5px;
     border: none;
