--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -116,10 +116,10 @@ a:hover {
     position: fixed;
     left: 100px;
     bottom: 150px;
-    background-color: ghostwhite;
+    background-color: whitesmoke;
     padding: 15px;
     z-index: 1;
-    width: 40%;
+    width: 30%;
     height: 30%;
 }
 /*email modal content*/
