--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -109,10 +109,11 @@ a:link, a:visited {
     display:inline-block;
     background-color: whitesmoke;
     color: darkgray;
+    margin: 5px;
+    border: none;
     padding: 10px;
     text-align: center;
     text-decoration: none;
-    margin-bottom: 10px;
 }
 a:hover {
     background-color: lightgray;
