--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -106,12 +106,12 @@ body {
 }
 /*link types*/
 a:link, a:visited {
-    display:inline-block;
+    display: inline-block;
     background-color: whitesmoke;
     color: darkgray;
-    margin: 5px;
+    margin: 10px;
     border: none;
-    padding: 10px;
+    padding: 5px 10px;
     text-align: center;
     text-decoration: none;
 }
@@ -177,6 +177,10 @@ a:hover {
     background-color: lightgray;
     color: black;
     cursor: pointer;
+}
+#portf_button {
+    float: left;
+    text-align: center;
 }
 
 /*
