--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -185,8 +185,12 @@ a:hover {
 }
 /*style project links/buttons*/
 #projectf_button {
+    border: none;
     width: 95%;
     height: auto;
+}
+#projectf_button:hover {
+    cursor: pointer;
 }
 
 /*
