--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -187,8 +187,7 @@ a:hover {
 }
 /*style project links/buttons*/
 #projectf_button {
-    display: block;
-    float: none;
+    display: flex;
     border: none;
     width: 95%;
     height: auto;
