--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -195,6 +195,8 @@ a:hover {
     height: auto;
 }
 #projectf_button:hover {
+    background-color: lightgray;
+    color: black;
     cursor: pointer;
 }
 
