added nor and eng translation of all the text
added two functions changes all innerHTML to either NOR or ENG
added const ref to id
added id to all HTML elements with text component

--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -181,7 +181,7 @@ a:hover {
     cursor: pointer;
 }
 /*style portfolio buttons*/
-#portf_button {
+.portf_button {
     float: left;
     text-align: center;
 }
