added lang_buttons id

--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -199,11 +199,13 @@ a:hover {
     color: black;
     cursor: pointer;
 }
-
+#lang_buttons{ /*div with language buttons*/
+    display: flex;
+    float: right;
+}
 /*
     Text styling
 */
-
 #specialStyleHead4 {
     display: inline-block;
     vertical-align: top;
