--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -202,7 +202,7 @@ a:hover {
 #lang_buttons{ /*div with language buttons*/
     display: block;
     float: right;
-    align-items: center;
+    align-content: center;
     justify-content: center;
 }
 /*
