--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -202,8 +202,8 @@ a:hover {
 #lang_buttons{ /*div with language buttons*/
     display: block;
     float: right;
-    align-content: center;
-    justify-content: center;
+    align-content: center; /*vertical*/
+    justify-items: right; /*horizontal*/
 }
 /*
     Text styling
