--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -200,7 +200,7 @@ a:hover {
     cursor: pointer;
 }
 #lang_buttons{ /*div with language buttons*/
-    display: block;
+    display: flex;
     float: right;
     align-content: center; /*vertical*/
     justify-items: right; /*horizontal*/
