--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -18,7 +18,7 @@ body {
 
 /*top, the banner, the top part of the screen*/
 .htop {
-    display: flex;
+    display: block;
     right: 50px;
     background-color: lightgray;
     height: 200px;
