--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -205,6 +205,7 @@ a:hover {
 .lang_buttons { /*div with language buttons*/
     display: flex;
     flex-direction: row;
+    align-items: baseline;
     align-content: flex-end; /*vertical*/
     justify-items: right; /*horizontal*/
     font-family: Arial, Helvetica, sans-serif;
