--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -258,11 +258,8 @@ a:hover {
         width: 95%;
         height: auto;
     }
-    .column .text_boxes .content_space .aboutme_info .column {
-        justify-content: center;
-    }
     #portf_button {
         float: none;
-        
+        justify-self: center;
     }
 }
