--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -234,6 +234,7 @@ a:hover {
 @media (max-width: 900px) {
     .column {
         flex-direction: column;
+        justify-content: center;
     }
     .footer {
         height: auto;
@@ -260,6 +261,5 @@ a:hover {
     }
     #portf_button {
         float: none;
-        justify-self: center;
     }
 }
