--- a/frontstylesheet.css
+++ b/frontstylesheet.css
@@ -6,10 +6,10 @@
     entire body
 */
 body {
-   /* display: flex;*/
     background-color: white;
     margin: 0px;
     border: none;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /*
